--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -3527,8 +3527,9 @@
  SER_milovanovic_cabinet_desc:0 "In this time of crisis, a young politician with bright future ahead of him, Mr Milovan Milovanović, has been chosen to lead the homogenous radical government."
  SER_balkan_strategy:0 "Balkan Strategy"
  SER_chetnik_situation:0 "Support Resistance Groups"
+ SER_chetnik_situation_desc:0 "The Chetniks are a group of guerrilas deep within Ottoman territory. We should increase aid to them, thereby giving us a force behind enemy lines.
  SER_balkan_alliance:0 "Plans of Balkan Alliance"
- SER_balkan_alliance_desc:0 " The Balkan League was first attempted even during the rule of prince Mihailo Obrenović. His premature death prevented the alliance from being formed. Now, we have a chance to form the alliance and liberate our brothers from the Ottoman Empire."
+ SER_balkan_alliance_desc:0 " The Balkan League was first attempted even during the rule of Prince Mihailo Obrenović. His premature death prevented the alliance from being formed. Now, we have a chance to form the alliance and liberate our brothers from the Ottoman Empire."
  SER_unexpected_opportunity:0 "Unexpected Opportunity"
  SER_start_the_races_AUH:0 "Liberate Habsburg Lands"
  SER_formalize_the_alliance:0 "Formalize the Alliance"
@@ -3537,7 +3538,7 @@
  SER_elections_1912:0 "Elections of 1912"
  SER_elections_1912_desc:0 "The elections of 1912 were a proof of our system working as intended. Two parties competed for the position of prime minister and for power in the country, and the people will choose who will lead them for next 4 years, though history had shown that no government survived that long. We shall see what will come out of this elections..."
  SER_start_the_races_TUR:0 "Liberate Old Serbia"
- SER_start_the_races_TUR_desc:0 "It is time to destroy the nation that was plaguing Balkan Peninsula for 5 centuries and liberate our people from Ottoman slavery. Everything is ready, now we have just to set the plan in motion"
+ SER_start_the_races_TUR_desc:0 "It is time to destroy the nation that has plagued the Balkan Peninsula for 5 centuries and liberate our people from Ottoman slavery. Everything is ready, now we have just to set the plan in motion"
  SER_radical_victory:0 "Old Radical Victory"
  SER_radical_victory_desc:0 "Unsurprisingly, the People's Radical Party had won the elections again. The people had shown support for the party that had been leading the country for the past 10 years, and the party had shown that it is capable of leading the country. Prime Minister [SER.GetLeader] will be continuing his mandate for the foreseable future, at least until the next election which will happen in 4 years."
  SER_independent_radical_victory:0 "Independent Radical Victory"
@@ -3602,7 +3603,7 @@
  SER_war_loan:0 "War Loans"
  SER_war_loan_desc:0 "In order to have any chance of victory against the invading forces, we are in need of a vast financial and material support. The government will be already negotiating with the banks and foreign powers to secure the required material support."
  SER_weapon_purchases:0 "Weapon Purchases"
- SER_weapon_purchases_desc:0 "Serbian economy, despite it's rapid recent growth, is not capable of producing enough weapons for the upcoming war. We will have to buy weapons from abroad."
+ SER_weapon_purchases_desc:0 "The Serbian economy, despite it's rapid recent growth, is not capable of producing enough weapons for the upcoming war. We will have to buy weapons from abroad."
  SER_subsidize_war_industry:0 "Subsidize War Industry"
  SER_subsidize_war_industry_desc:0 "The war industry is in need of vast financial support. The government is already taking measures to ensure our defense industry will be ready for the massive expected demand."
  SER_Nis_declaration:0 "Niš Declaration"
@@ -3639,7 +3640,7 @@
  SER_french_republican_support_tooltip:0 "We will reach out to France to ask them for support in our regime change. If they approve, the regime change might go far easier. However, ensuring French support would require also ensuring Russian support, which would be difficult to obtain."
  SER_depose_the_king_tooltip:0 "We will start the process of removal of the monarchy. It might provoke monarchist sympatizers into action!"
  SER_roads_development:0 "Road development"
- SER_roads_development_desc:0 "Serbia still a rural country. It is important to connect each provincial capital by establishing maintained and secure national roads through the territory."
+ SER_roads_development_desc:0 "Serbia is still a rural country. It is important to connect each provincial capital by establishing maintained and secure national roads through the territory."
  SER_beograd_expansion:0 "Beograd Expansion"
  SER_beograd_expansion_desc:0 "The modernization of our economy allows us to centralize part of our investments in the capital. Belgrade will welcome new factories in the automotive and canning sectors."
  SER_beograd_airfield:0 "Beograd Airfield"
@@ -3662,6 +3663,7 @@
  grand_coalition_collapse:0 "The Grand Coalition has §Rcollapsed§!"
  elections_1912:0 "1912 Elections are concluded"
  SER_army_debate:0 "The Paramilitary Question"
+ SER_army_debate_desc:0 "Secret societies and paramilitary groups exist not only in the military but within every branch of government. The question of what should be done with them remains unclear.
  SER_army_modernization:0 "Army Modernization"
  SER_convention_with_romania:0 "Convention with Romania"
  SER_mend_the_officers_relations:0 "Support Supra-Nationalists"
@@ -3676,6 +3678,7 @@
  SER_reach_out_to_bosnian_resistance:0 "Reach Out to Bosnian Resistance"
  SER_reach_out_to_bosnian_resistance_desc:0 "In Bosnia, there are many sympathetic to our cause. With enough arms and training, they could sow havoc behind the the Austrian lines..." 
  SER_the_regency_question:0 "The Regency Question"
+ SER_the_regency_question_desc:0 "King Petar is growing old, without a strong leader Serbia will collapse. A regent is required to stand in for His Majesty.
  SER_stand_with_petar_i:0 "Stand with Petar I"
  SER_kings_mediation:0 "The King Mediation"
  SER_escalate_the_crisis:0 "Manipulate the Crisis"
@@ -9532,7 +9535,7 @@ FRA_init_in_deep_reforms_desc:0 "The French army must remain an organized struct
  SWE_swedish_domination:0 "Swedish Domination"
  SWE_swedish_domination_desc:0 "The sooner we get it through those Norweigan's thick skulls that they are not equal to us, the better."
  SWE_sweden_norway_is_back:0 "Sweden-Norway is Back!"
- SWE_sweden_norway_is_back_desc:0 "Huzzah! The Union has been reforged!"
+ SWE_sweden_norway_is_back_desc:0 "Huzzah! The Union has been reforged! the humiliation of 1905 is avenged."
  SWE_purge_popish_idolatry:0 "Purge Popish Idolatry"
  SWE_purge_popish_idolatry_desc:0 "Rome quivers in its luxurious, corrupt boots. We are coming for them."
  SWE_crush_socialists:0 "Crush the Socialists"
@@ -9762,7 +9765,7 @@ FRA_init_in_deep_reforms_desc:0 "The French army must remain an organized struct
  AUH_true_personality_amidst_the_inanity2:0 "The True Personality Amidst the Inanity"
  AUH_true_personality_amidst_the_inanity2_desc:0 ""
  manfred_weiss_steel_and_metal_works:0 "Manfréd Weiss Works"
- manfred_weiss_steel_and_metal_works_desc:0 "Manfréd Weiss Steel and Metal Works"
+ manfred_weiss_steel_and_metal_works_desc:0 " The Manfréd Weiss Steel and Metal Works is One of the largest companies in the empire. We will need their support for the sake of industrialisation and military expansion."
  AUH_has_invested_in_manfred_weiss_steel_and_metal_works:0 "Has invested in Manfréd Weiss Steel and Metal Works"
  orion_electronics:0 "Orion Electronics"
  AUH_has_invested_in_orion_electronics:0 "Has invested in Orion Electronics"
@@ -9811,7 +9814,7 @@ FRA_init_in_deep_reforms_desc:0 "The French army must remain an organized struct
  AUH_convert_civilian_planes:0 "Convert Civilian Planes"
  AUH_stimulate_economy:0 "Stimulate Economy"
  AUH_debts:0 "Debts"
- AUH_debts_desc:0 "The nation has accumulated a large amount of debt in a few years because of Emperor's gifts to his industrial friends."
+ AUH_debts_desc:0 "The nation has accumulated a large amount of debt in a few years because of the Emperor's gifts to his industrial friends."
  AUH_fund_the_OSB:0 "Fund the OSB"
  AUH_fund_the_OSB_desc:0 "Österreich-Ungarn Schuldenmanagement Beratung"
  autro_hungarian_public_debt_administration:0 "Austro-Hungarian Debt Administration"
@@ -10450,7 +10453,7 @@ skip_focus:0 "§YSkip Focus :§!"
  ALB_prepare_ottoman_coup:0 "Prepare Ottoman Coup"
  ALB_prepare_ottoman_coup_desc:0 "With majority of our Muslim population supporting the motion, along with Ottoman promises of a benevolent rule, autonomy and support in our irrdentist claim, we are ready to start preparations for the self-coup of Ismail Qemali. However, we should be careful, should Serbia or International Control Commission figure out what are we attempting to do, the consequences of our actions might be unforgiving."
  ALB_nationalist_agitation_in_kosmet:0 "Nationalist Agitation"
- ALB_nationalist_agitation_in_kosmet_desc:0 "In Serbian newly conquered province of Kosovo there is large amount of Albanians who are dissatisfied with Serbian tyrranical rule. We can perhaps persuade them into transfering their words with actions. Any action would be desirable, any killed Serbian soldier, civilian, administrator, teacher, anyone, would account for our cause."
+ ALB_nationalist_agitation_in_kosmet_desc:0 "In Serbia's newly conquered province of Kosovo there is large amount of Albanians who are dissatisfied with Serbian tyrranical rule. We can perhaps persuade them into transfering their words with actions. Any action would be desirable, any killed Serbian soldier, civilian, administrator, teacher, anyone, would account for our cause."
  ALB_contact_macedonians:0 "Contact Macedonians"
  ALB_contact_macedonians_desc:0 "We have came in contact with Bulgarians living in Macedonia, after their defeat in Second Balkan War. With Bulgaria in no shape to help them bear with the oppressing Serbs, they can, through our new partner VMRO, join in our struggle against the Serbian nation."
  ALB_launch_the_uprising:0 "Launch the Uprising"
@@ -10466,15 +10469,15 @@ skip_focus:0 "§YSkip Focus :§!"
  ALB_increase_legitimacy:0 "Increase Legitimacy"
  ALB_increase_legitimacy_desc:0 "With us controlling most of our territory, the nation threw it's support to Essad Pasha. Our government is already in talks with negotiating Serbian recognition and foreign recognition will probably come soon as well."
  ALB_serbian_support:0 "Serbian Support"
- ALB_serbian_support_desc:0 "With Vlore government openly antagonizing Serbs even after their failed uprising, Essad Pasha has decided for a more pragmatic approach. While he isn't a fan of the nation that occupies Albanian-majority areas, he knows that Serbia is not going away anytime soon and that we need to cooperate in order to have peace in the Balkans for once."
+ ALB_serbian_support_desc:0 "With the Vlore government openly antagonizing Serbs even after their failed uprising, Essad Pasha has decided for a more pragmatic approach. While he isn't a fan of the nation that occupies Albanian-majority areas, he knows that Serbia is not going away anytime soon and that we need to cooperate in order to have peace in the Balkans for once."
  ALB_woo_italy:0 "Woo Italy"
- ALB_woo_italy_desc:0 "Italy has always been a strong proponent for Albanian independence. With Vlore government making a move towards Central Powers, notably Austria-Hungary, antagonizing all of it's neighbours, and even though Italy is nominally a member of the Central powers, we are aware of the fact that Italy had been drifting away from the Central Powers as of recently, with them claiming Austro-Hungarian territory, most notably Adriatic coast. We can use the rift created between the two countries to gain upper hand in our power struggle with the Vlore government."
+ ALB_woo_italy_desc:0 "Italy has always been a strong proponent for Albanian independence. With the Vlore government making a move towards the Central Powers, notably Austria-Hungary, antagonizing all of it's neighbours, and even though Italy is nominally a member of the Central powers, we are aware of the fact that Italy had been drifting away from the Central Powers as of recently, with them claiming Austro-Hungarian territory, most notably Adriatic coast. We can use the rift created between the two countries to gain upper hand in our power struggle with the Vlore government."
  ALB_scavenge_equipment:0 "Scavenge Equipment"
  ALB_scavenge_equipment_desc:0 "With Ottoman retreat and later subsequente Serbian retreat from our territory, a large amount of equipment had been left behind, being too heavy to carry, being broken or neglected. Whatever is the case, we have a literal treasure in our territory, and we should attempt to use it to our advantage, repair what needs repair, and what is beyond repair to use for parts. As our industry is almost nonexistent, this should help us bear with the uprisings, mutinies and the ongoing civil conflict."
  ALB_demand_recognition:0 "Demand Recognition"
  ALB_demand_recognition_desc:0 "With us gaining an upper hand over the usurpers in the south, our diplomats had already obtained contact with foreign emmisaries through our Serbian allies in regards of recognizing our government as sole legitimate government of Albania. With recognition, we should also try to ensure the retreat of the International Gendarmerie, which will render the Vlore Government powerless to resist our forces in the near future."
  ALB_treaty_of_Nis:0 "Treaty of Niš"
- ALB_treaty_of_Nis_desc:0 "While on the way home, Essad Pasha had contacted his old allies in Serbia. With Serbian government evacuated to Niš as the result of the ongoing war with Austria-Hungary, and with their recent victories, Essad Pasha had managed to obtain a meeting with Serbian Prime Minister [SER.GetLeader]. Serbia had promised the support for Essad Toptani, as well as financing his militia, at least until Albania is pacified and fully under his control. However, domestic analysts consider this as move of betrayal, as the Serbia is still in most of Albania's eyes, considered an arch enemy, and even more moderate of them see this move as attempt of occupation. Regardless of their opinion, Essad Pasha is on the road to Albania, where he will try to establish order, with Serbian help."
+ ALB_treaty_of_Nis_desc:0 "While on the way home, Essad Pasha had contacted his old allies in Serbia. With the Serbian government evacuated to Niš as the result of the ongoing war with Austria-Hungary, and with their recent victories, Essad Pasha had managed to obtain a meeting with Serbian Prime Minister [SER.GetLeader]. Serbia had promised the support for Essad Toptani, as well as financing his militia, at least until Albania is pacified and fully under his control. However, domestic analysts consider this as move of betrayal, as the Serbia is still in most of Albania's eyes, considered an arch enemy, and even more moderate of them see this move as attempt of occupation. Regardless of their opinion, Essad Pasha is on the road to Albania, where he will try to establish order, with Serbian help."
  ALB_united_albania:0 "United Albania"
  ALB_united_albania_desc:0 "Albania is finally united under the leadership of Essad Toptani. With the last pockets of resistance against his rule disappearing into the mountains, Essad has proclaimed himself prime minister of the new Albanian government. With Prince in exile, this gives him the free access to whole Albania."
  ALB_consolidate_position:0 "Consolidate Position"
