--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -5067,6 +5067,8 @@ ROM_overturn_the_blue_law_desc:0 "Seperation of church and state is one of the m
 pcd_leader:0 "Leader of the §mPCD§!"
 ROM_mandatory_insurance:0 "Mandatory Insurance"
 ROM_mandatory_insurance_desc:0 "Many urban Romanians work in unsafe conditions without any compensations for their employers negligence that may lead to them being injured. We must put an end to this exploitative practice, and mandate employers give insurance to their workers."
+ROM_social_conservative_principal:0 "Social Conservative Principal"
+ROM_social_conservative_principal_desc:0 ""
 ROM_take_ionescu:0 "Take Ionsecu"
  ROM_the_natural_party_of_governance:0 "The Natural Party of Governance"
  ROM_the_natural_party_of_governance_desc:0 "The PNL has ruled competently for the past 3 years. Entrusted by the king and the people, the PNL has carefully passed much needed reform and brought stability to the country ever since the 1907 peasant revolt. Its clear the PNL is suitable to continue governing"
@@ -5127,7 +5129,11 @@ ROM_our_rural_base_desc:0 "We need to consolidate our support across the country
 ROM_invite_western_thinkers:0 "Invite Western Thinkers"
 ROM_invest_in_romania_steel_industry:0 "Invest in Romania’s steel industry"
 ROM_romania_for_those_who_deserve_it:0 " Romania for those who deserve it"
-ROM_austia_military_research:0 "Military Cooperation with Austria-Hungary"
+ROM_austia_military_research:0 "Austro-Romanian Military Cooperation"
+ROM_crush_the_protesters:0 "Crush The Protesters"
+ROM_crush_the_protesters_desc:0 ""
+ROM_the_unholy_alliance:0 "The Unholy Alliance"
+ROM_the_unholy_alliance_desc:0 ""
 #events 
 ww1_romania.18.d:0 "With the king losing faith in the current government, the current Prime Minister has been forced to resign. With the Prime Minister spot vacant, the king will now have to form a new government. The king has several different options available, and must pick the best one. Who shall be appointed to form the next government?"
 ww1_romania.18.a:0 "The PCD will lead a stable government!"
