better investment and will fix tooltip later

--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -2012,14 +2012,24 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  TUR_investing_in_the_sick_man:0 "Investing in the Sick Man"
  invest_in_ottoman_rumelia:0 "Invest in Ottoman Rumelia"
  invest_in_ottoman_rumelia_desc:0 "Our nation has a history of investing in the Ottomans. Through investments in the varous regions of the empire, we can gain financial leverages."
+ invest_in_ottoman_rumelia_mission:0 "Invest in Ottoman Rumelia"
+ invest_in_ottoman_rumelia_mission_desc:0 "Our nation has a history of investing in the Ottomans. Through investments in the varous regions of the empire, we can gain financial leverages."
  invest_in_ottoman_anatolia:0 "Invest in Ottoman Anatolia"
  invest_in_ottoman_anatolia_desc:0 "Our nation has a history of investing in the Ottomans. Through investments in the varous regions of the empire, we can gain financial leverages."
+ invest_in_ottoman_anatolia_mission:0 "Invest in Ottoman Anatolia"
+ invest_in_ottoman_anatolia_mission_desc:0 "Our nation has a history of investing in the Ottomans. Through investments in the varous regions of the empire, we can gain financial leverages."
  invest_in_ottoman_syria:0 "Invest in Ottoman Syria"
  invest_in_ottoman_syria_desc:0 "Our nation has a history of investing in the Ottomans. Through investments in the varous regions of the empire, we can gain financial leverages."
+ invest_in_ottoman_syria_mission:0 "Invest in Ottoman Syria"
+ invest_in_ottoman_syria_mission_desc:0 "Our nation has a history of investing in the Ottomans. Through investments in the varous regions of the empire, we can gain financial leverages."
  invest_in_ottoman_mesapotamia:0 "Invest in Ottoman Mesapotamia"
  invest_in_ottoman_mesapotamia_desc:0 "Our nation has a history of investing in the Ottomans. Through investments in the varous regions of the empire, we can gain financial leverages."
+ invest_in_ottoman_mesapotamia_mission:0 "Invest in Ottoman Mesapotamia"
+ invest_in_ottoman_mesapotamia_mission_desc:0 "Our nation has a history of investing in the Ottomans. Through investments in the varous regions of the empire, we can gain financial leverages."
  invest_in_ottoman_trablusgarp:0 "Invest in Ottoman Trablusgarp"
  invest_in_ottoman_trablusgarp_desc:0 "Our nation has a history of investing in the Ottomans. Through investments in the varous regions of the empire, we can gain financial leverages."
+ invest_in_ottoman_trablusgarp_mission:0 "Invest in Ottoman Trablusgarp"
+ invest_in_ottoman_trablusgarp_mission_desc:0 "Our nation has a history of investing in the Ottomans. Through investments in the varous regions of the empire, we can gain financial leverages."
  already_investing_in_the_ottomans:0 "Already §Yinvesting§! in §Y[TUR.GetNameDef]§!"
  TUR_not_taking_investment_rumelia:0 "§Y[TUR.GetName]§! blocked our §Yinvestment§!"
  TUR_not_taking_investment_anatolia:0 "§Y[TUR.GetName]§! blocked our §Yinvestment§!"
@@ -2626,7 +2636,7 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  TUR_massacre_assyrians:0 "Massacre Assyrians in [FROM.GetName]"
  TUR_massacre_assyrians_desc:0 "There are several towns and villages that accompany a large Assyrian population in [FROM.GetName]. By massacring them in their native lands, we can create an ethnically homogenious society."
  TUR_lift_the_mutasarrifate_of_catalca:0 "Lift the Mutasarrifate of Çatalca"
- TUR_lift_the_mutasarrifate_of_catalca_desc:0 "Mutasarrifate of Çatalca is an autonomous Sanjak within the vilayet of KonstantiniyyeUnder our centralization efforts, we'll lift this special status of Çatalca and make it a yet again Ottoman vilayet."
+ TUR_lift_the_mutasarrifate_of_catalca_desc:0 "Mutasarrifate of Çatalca is an autonomous Sanjak within the vilayet of Konstantiniyye. Under our centralization efforts, we'll lift this special status of Çatalca and make it a yet again Ottoman vilayet."
  TUR_lift_the_mutasarrifate_of_izmit:0 "Lift the Mutasarrifate of İzmit"
  TUR_lift_the_mutasarrifate_of_izmit_desc:0 "Mutasarrifate of İzmit being an autonomous sanjak under Vilayet of Hüdavendigar. Under our centralization efforts, we'll lift this special status of İzmit and make it a yet again Ottoman vilayet."
  TUR_lift_the_mutasarrifate_of_biga:0 "Lift the Mutasarrifate of Biga"
