--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -1761,7 +1761,7 @@ TUN_italian_minority:0 "Italian Minority"
 
  ww1_france.384.t: "Ottoman Mission in France"
  ww1_france.384.d: "The Ottoman mission finished its trip to France, a tour of the country which lasted 3 weeks. The head of the Adrianople archives office, Ali Riza Bey, described the French and the Ottomans as brother peoples after his visit.\n\nThe Ottoman mission was a group of civilians and soldiers sent by the Ottoman government and was received in France from June 9 to 30, 1910. It visited Paris, Reims, Lille, Le Creusot, Saint-Etienne, Lyon, Nancy, Marseille to visit schools, administrations and factories."
- ww1_france.384.a: "Long live France And long live to young Türkiye!"
+ ww1_france.384.a: "Long live France And long live to our empire!"
 
 
  ww1_france.385.t: "Extreme heat wave in France"
