--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -5134,6 +5134,8 @@ ROM_crush_the_protesters:0 "Crush The Protesters"
 ROM_crush_the_protesters_desc:0 ""
 ROM_the_unholy_alliance:0 "The Unholy Alliance"
 ROM_the_unholy_alliance_desc:0 ""
+ROM_disband_the_parliament:0 "Disband The Parliament"
+ROM_the_peoples_dictator:0 "The people's dictator"
 #events 
 ww1_romania.18.d:0 "With the king losing faith in the current government, the current Prime Minister has been forced to resign. With the Prime Minister spot vacant, the king will now have to form a new government. The king has several different options available, and must pick the best one. Who shall be appointed to form the next government?"
 ww1_romania.18.a:0 "The PCD will lead a stable government!"
