1915 Events + Gandhi Events

--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -9395,10 +9395,20 @@ kis_news.143.a:0 "Will the revolution spread to Western Europe?"
 
  #INDIA/RAJ
 
- # Flavor #
-
- # 1910
+ # Gandhi
  
+ ww1_gandhi_raj.1.t:0 "Gandhi Returns to India"
+ ww1_gandhi_raj.1.d:0 "After years of campaigning for Indian rights in South Africa, Mohandas Karamchand Gandhi has returned to India, his homeland. Arriving in Bombay to a warm and enthusiastic reception, Gandhi's return marks a significant moment in India's struggle for independence. Gandhi, who had spent two decades in South Africa, emerged as a prominent and charismatic leader, using his philosophy of non-violent resistance, or satyagraha, to combat racial discrimination and injustice. His efforts in South Africa not only inspired millions, but also set the stage for his future endeavours in India.\n\nGandhi's return is expected to reinvigorate the Indian independence movement as he brings his wealth of experience, leadership and dedication to the cause of freedom and justice. Although he isn't the current president of the INC, he is now wielding increasing influence within the Congress and has become its leader in all but name."
+ ww1_gandhi_raj.1.a:0 "Let's see how his ''non-violence'' philosophy serves him here."
+ RAJ_ghandi_return_option:0 "\nAs he had promised to §YGokhale§!, his political mentor, §YMohandas Karamchand Gandhi§! will not express himself on public issues for a year, as a ''year of probation''.\n\nAfter this period, however, §YMohandas Karamchand Gandhi§! will be able to call for §Rnon-violent actions§!."
+
+ ww1_gandhi_raj.2.t:0 "All-India Hindu Grand Assembly Formed"
+ ww1_gandhi_raj.2.d:0 "In a momentous development for Hindu political and cultural unity, the Sarvadeshak Hindu Sabha (All-India Hindu Grand Assembly), was officially established at the Kumbh Mela in Haridwar this month. This umbrella organization is the culmination of a concerted effort by Hindu leaders to consolidate regional Hindu Sabhas into a singular, powerful entity. The initiative, sparked by the controversial partition of Bengal in 1905 and the subsequent formation of the All India Muslim League, sought to safeguard Hindu interests amisdt increasing communal tensions. Preparatory sessions were held earlier this year in Haridwar, Lucknow, and Delhi, leading to the grand assembly's formation. Prominent figures such as Mahatma Gandhi and Swami Shraddhanand lent their support, emphasizing Hindu solidarity and the need for social reforms."
+ ww1_gandhi_raj.2.a:0 "Let's keep an eye on them."
+ 
+ # Flavor #
+ 
+ # 1910
  ww1_flavor_raj.15.t:0 "Second Hearing of the Howrah-Sibpur Conspiracy Case"
  ww1_flavor_raj.15.d:0 "The Howrah-Sibpur conspiracy case began with the murder of Inspector, Assistant Superintendent and Intelligence Officer of the Bengal Police, Shamsul Alam, on 24 January 1910 in Calcutta. Alam was investigating the murder of Naren Gosain, crown-witness in the Alipore bomb case, the murder of Ashutosh Biswas, the Calcutta High Court advocate in charge of prosecuting the Gossain murder case, and the murder of police officer Naren Bannerjee, who had arrested Khudiram Bose. Alam had uncovered the underlying Bengali revolutionary network of the 'Anushilan Samiti' that linked the murders and other robberies, and was preparing to consolidate the charges to bring them all to trial in a single case.\n\nBy 29 January 1910, 47 of the accused had been arrested. The trial of the accused began on 4 March 1910, with a second hearing in the Calcutta High Court taking place today. However, the decentralised structure of the Samiti meant that the prosecution's attempts to show that the crimes were linked and that the Samiti was a unified organisation failed. 33 of the accused were subsequently acquitted. Of the accused, Jatin Mukherjee and Narendranath Bhattacharjee were among those convicted and sentenced to one year's imprisonment."
  ww1_flavor_raj.15.a:0 "We'll keep this ''Samiti'' organisation in check."
@@ -9425,7 +9435,6 @@ kis_news.143.a:0 "Will the revolution spread to Western Europe?"
  ww1_flavor_raj.4.a:0 "Beautiful."
 
  # 1912
-
  ww1_flavor_raj.5.t:0 "Lala Har Dayal write ''Marx: A Modern Rishi''"
  ww1_flavor_raj.5.d:0 "Today, Lala Har Dayal wrote ''Marx: A Modern Rishi''. The article, which is believed to be the first Indian piece to delve into the theories of Karl Marx, offers a unique perspective by drawing parallels between Marx's philosophies and the ancient wisdom of Indian rishis (Sages). Har Dayal, known for his radical views and activism, explores how Marx’s critique of capitalism and vision for a classless society resonate with the teachings of ancient Indian philosophers. He argues that Marx's emphasis on social justice and economic equality aligns with the ethical and moral values espoused by India's spiritual leaders."
  ww1_flavor_raj.5.a:0 "Crackhead."
@@ -9448,7 +9457,6 @@ kis_news.143.a:0 "Will the revolution spread to Western Europe?"
  ww1_flavor_raj.9.a:0 "It almost feels like there is more Christian related news in India than Hindu related ones!"
 
  # 1913
-
  ww1_flavor_raj.10.t:0 "Raja Harischandra"
  ww1_flavor_raj.10.d:0 "Today, the movie ''Raja Harishchandra'' premiered, holding the esteemed title of being India's first full-length feature film. Directed and produced by Dadasaheb Phalke, this silent film is based on the legendary Indian tale of King Harishchandra, celebrated for his unwavering commitment to truth and integrity. The plot unfolds as the king faces a series of trials and tribulations, including losing his kingdom, wealth, and family, to uphold his promise and truth. His steadfastness is ultimately rewarded by the gods, restoring his lost kingdom and family, symbolizing the triumph of virtue over adversity."
  ww1_flavor_raj.10.a:0 "Are they trying to replicate Hollywood? And what are they gonna call it, huh? ''Bollywood''?"
@@ -9462,7 +9470,6 @@ kis_news.143.a:0 "Will the revolution spread to Western Europe?"
  ww1_flavor_raj.12.a:0 "A charismatic fool is still a fool."
 
  # 1914
-
  ww1_flavor_raj.13.t:0 "Barisal Conspiracy Case"
  ww1_flavor_raj.13.d:0 "Last year, our colonial police uncovered several documents in the Barisal district in the south-eastern corner of Bengal. These documents implicated the Anushilan Samiti, a revolutionary organisation whose East Bengal wings were led by Trailokyanath Chakravarty and Pratul Chandra Ganguli. Among the documents seized was a proposal to seduce native troops and incite them to rebellion and massacre the British.\n\nThe trial of the 44 began in Calcutta in June 1913. The Crown prosecutor claimed to show evidence of how the conspirators had divided Bengal into several districts to preach sedition. The Samiti had targeted students and unmarried youths with meetings and services, and had hundreds of members in Barisal district alone.\n\nThe verdict was delivered today and of the original 44 accused, 32 were acquitted, pardoned or had the cases against them withdrawn. The remaining 12 pleaded guilty to the charge of conspiracy against the British Crown. Five of the 12 - including Pratul Chandra - were sentenced to long terms of transportation to the Andaman Islands, ranging from 10 to 12 years. The remaining seven convicts received transportation sentences of between two and seven years."
  ww1_flavor_raj.13.a:0 "Ungratefuls"
@@ -9472,15 +9479,10 @@ kis_news.143.a:0 "Will the revolution spread to Western Europe?"
  ww1_flavor_raj.14.a:0 "Hopefully this will be the worst thing to happen this year!"
 
  # 1915
-
- ww1_flavor_raj.17.t:0 "Ghandi Returns to India"
- ww1_flavor_raj.17.d:0 "After years of campaigning for Indian rights in South Africa, Mohandas Karamchand Gandhi has returned to India, his homeland. Arriving in Bombay to a warm and enthusiastic reception, Gandhi's return marks a significant moment in India's struggle for independence. Gandhi, who had spent two decades in South Africa, emerged as a prominent and charismatic leader, using his philosophy of non-violent resistance, or satyagraha, to combat racial discrimination and injustice. His efforts in South Africa not only inspired millions, but also set the stage for his future endeavours in India.\n\nGandhi's return is expected to reinvigorate the Indian independence movement as he brings his wealth of experience, leadership and dedication to the cause of freedom and justice. Although he isn't the current president of the INC, he is now wielding increasing influence within the Congress and has become its leader in all but name."
- ww1_flavor_raj.17.a:0 "A. O. Hume would be proud."
- RAJ_ghandi_return_option:0 "\n§YMohandas Karamchand Gandhi§! will now be able to call for non-violent actions."
-
- ww1_flavor_raj.18.t:0 "All-India Hindu Grand Assembly Formed"
- ww1_flavor_raj.18.d:0 "In a momentous development for Hindu political and cultural unity, the Sarvadeshak Hindu Sabha (All-India Hindu Grand Assembly), was officially established at the Kumbh Mela in Haridwar this month. This umbrella organization is the culmination of a concerted effort by Hindu leaders to consolidate regional Hindu Sabhas into a singular, powerful entity. The initiative, sparked by the controversial partition of Bengal in 1905 and the subsequent formation of the All India Muslim League, sought to safeguard Hindu interests amisdt increasing communal tensions. Preparatory sessions were held earlier this year in Haridwar, Lucknow, and Delhi, leading to the grand assembly's formation. Prominent figures such as Mahatma Gandhi and Swami Shraddhanand lent their support, emphasizing Hindu solidarity and the need for social reforms."
- ww1_flavor_raj.18.a:0 "Let's keep an eye on them."
+ 
+ ww1_flavor_raj.17.t:0 "Kallumala Samaram"
+ ww1_flavor_raj.17.d:0 "The Pulayar community, led by Ayyankali, today launched what is now known as the 'Kallumala Samaram', also known as the 'Stone Necklace Protest' or even the 'Perinad Mutiny'. In a historic uprising against caste oppression in Perinad and surrounding villages, the agitation saw Pulayas defy upper caste restrictions on using public roads, wearing good clothes, carrying umbrellas, accessing education, entering temples and adorning themselves with gold or metal ornaments. The protest reached a climax when the Pulayas called a large meeting at Plavilapurayidom, Cherumoodu, only to be violently attacked by Nair landlords led by Koori Maathu and Kannan Pillai. The ensuing clashes necessitated intervention, leading to a crucial meeting at Peeranki Maidan today, overseen by Ayyankali, Changanassery Parameswaran Pillai and British officials. In a symbolic act of liberation, Pulaya women took off their kallumalas and declared their right to wear gold or metal ornaments."
+ ww1_flavor_raj.17.a:0 "For their sake, let's hope they can have the reforms they want."
 
  # Focus #
 
@@ -9585,10 +9587,6 @@ kis_news.143.a:0 "Will the revolution spread to Western Europe?"
  ww1_raj.28.t:0 "Garret O'Moore Creagh Steps Down."
  ww1_raj.28.d:0 "PLACEHOLDER"
  ww1_raj.28.a:0 "It's time to close this dark chapter in the Raj's history."
-
- ww1_raj.29.t:0 "Kallumala Samaram"
- ww1_raj.29.d:0 "PLACEHOLDER"
- ww1_raj.29.a:0 "Progress comes at a cost."
 
  ww1_raj.30.t:0 "Bijolia movement"
  ww1_raj.30.d:0 "PLACEHOLDER"
