--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -5114,7 +5114,7 @@ ROM_adapt_to_the_times_desc:0 ""
 
 ROM_minimum_wage_law:0 "Minimum Wage Law"
 ROM_anti_corruption_campaign:0 "Anti-Corruption Campaign"
-ROM_halve_parliments_size:0 "Halve Parliaments Size"
+ROM_halve_parliments_size:0 "Halve Parliaments Seats"
 ROM_halve_parliments_size_desc:0 "Romanias parliament is much too bloated and powerful. To reduce parliaments power, we should reduce their size in half and draw new boundries favoring conservative politicians."
 ROM_law_and_order:0 "A Stable Government"
 ROM_law_and_order_desc:0 "The kings number 1 priority above all is clearly a stable government. While the king may disagree with our anti democratic policies, if we can promise the king a stable hand during the dangerous times the world is facing as of now then he may be inclined to accept our rule, for now."
@@ -5129,7 +5129,7 @@ ROM_our_rural_base_desc:0 "We need to consolidate our support across the country
 ROM_invite_western_thinkers:0 "Invite Western Thinkers"
 ROM_invest_in_romania_steel_industry:0 "Invest in Romania’s steel industry"
 ROM_romania_for_those_who_deserve_it:0 " Romania for those who deserve it"
-ROM_austia_military_research:0 "Austro-Romanian Military Cooperation"
+ROM_austia_military_research:0 "Military Cooperation with Austria-Hungary"
 ROM_crush_the_protesters:0 "Crush The Protesters"
 ROM_crush_the_protesters_desc:0 ""
 ROM_the_unholy_alliance:0 "The Unholy Alliance"
