the national unity state

--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -9300,3 +9300,17 @@ FRA_worker_safety_law_desc:0 "The law proposed by Deputy §YAristide Briand§! a
 
 FRA_salary_limitation_act:0 "Salary Limitation Act"
 FRA_salary_limitation_act_desc:0 "The law proposed by §YMaurice Thorez§! define a calculation formula limiting the maximum salary within a company based on its profits, the number of employees and the lowest salary. To resume it in its simplest form, it limits the maximum salary to 25 times the lowest salary in the company."
+
+#Romania
+king_opinion_set_n.tt:0 "The king's opinion of the current government become §YNeutral§!, which gives us:\nDaily Political Power Gain: §Y+0.00§!\nStability: §Y+0.00%§!"
+king_opinion_improve.tt:0 "The king's opinion of the current government will §Gimprove§!"
+king_opinion_worse.tt:0 "The king's opinion of the current government will §Rworsen!"
+
+ ROM_kings_country_category:0 "The Puppet Master"
+ ROM_kings_country_category_desc:0 "While a constitutional monarchy with quite strong seperations of power, the constitution does delegate many powers to the king. Romanias king can outright dismiss governments as well as dissolve parliament in times of crisis. While very rarely used, while also holding huge influence over the opinions of Romanias public and politicians. If the king is angered by our government too much, they may support the opposition or even resort to §Rextreme measures§!. In addition, if the king approves of our government, they may use their political clout to help push our agenda.\n\nThe king's opinion can very from the following:\n§RVery negative§!, which gives us:\nDaily Political Power Gain: §R-0.20§!\nStability: §R-12.00%§!\n§ONegative§!, which gives us:\nDaily Political Power Gain: §R-0.10§!\nStability: §R-6.00%§!\n§YNeutral§!, which gives us:\nDaily Political Power Gain: §Y+0.00§!\nStability: §Y+0.00%§!\n§7Positive§!, which gives us:\nDaily Political Power Gain: §G+0.10§!\nStability: §G+6.00%§!\n§GVery positive§!, which gives us:\nDaily Political Power Gain: §G+0.20§!\nStability: §G+12.00%§!\n\nThe king's current opinion of the government is [KingsOpinionRomania]"
+ROM_king_view_complete_disapprove:0 "§RVery negative§!, which gives us:\nDaily Political Power Gain: §R-0.20§!\nStability: §R-12.00%§!"
+ROM_king_view_disapprove:0 "§ONegative§!, which gives us:\nDaily Political Power Gain: §R-0.10§!\nStability: §R-6.00%§!"
+ROM_king_view_neutral:0 "§YNeutral§!, which gives us:\nDaily Political Power Gain: §Y+0.00§!\nStability: §Y+0.00%§!"
+ROM_king_view_approve:0 "§7Positive§!, which gives us:\nDaily Political Power Gain: §G+0.10§!\nStability: §G+6.00%§!"
+ROM_king_view_complete_approve:0 "§GVery positive§!, which gives us:\nDaily Political Power Gain: §G+0.20§!\nStability: §G+12.00%§!"
+ROM_kings_rotation:0 "Kings Rotation"
