--- a/localisation/english/ww1_ideas_l_english.yml
+++ b/localisation/english/ww1_ideas_l_english.yml
@@ -2817,6 +2817,18 @@ VIN_administration_indigene_desc:0 "Part of the indigenous elites are now member
  ROM_tax_cuts_for_poor:0 "Tax Cuts for the Poor"
  ROM_enpower_the_elites_idea:0 "Empowered Elites"
  ROM_enpower_the_elites_idea_desc:0 ""
+ ROM_landlord_association:0 "Landlord Association"
+ ROM_soldiers_benefits:0 "Soldier Benefits"
+ ROM_left_wing_protesters:0 "Left Wing Protesters"
+ ROM_mandated_insurance1:0 "Mandated Insurance"
+ ROM_kings_influence:0 "The Political King"
+ ROM_influence_of_the_church:0 "Influence of the Church"
+ ROM_corruption_purges:0 "Corruption purges"
+ ROM_balance_budget:0 "Budget Balancing"
+ ROM_blue_law_overturned:0 "Overturned Blue Law"
+ ROM_welcome_anglo_italian_banks_idea:0 "Anglo-Italian Banks"
+ ROM_influx_of_western_intellectuals_idea:0 "Influx of Western Intellectuals"
+ ROM_aristocratic_romania_idea:0 "An Aristocratic Romania"
  
  #PERU
  PRU_aristocratic_republic:0 "Aristocratic Republic"
