--- a/localisation/english/parties_l_english.yml
+++ b/localisation/english/parties_l_english.yml
@@ -943,11 +943,18 @@
  ROM_legionary_party:0 "Mişcarea Legionară"
  ROM_legionary_party_long:0 "Legiunea Arhanghelul Mihail"
  ROM_pcd:0 "PCD"
-ROM_pcd_long:0 "Partidul Conservator-Democrat"
+ ROM_pcd_long:0 "Partidul Conservator-Democrat"
+ ROM_disband_the_parliament_pc_name:0 "PC - Carpists"
+ ROM_disband_the_parliament_pc_name_long:0 "Partidul Conservator - Carpists"
+ ROM_disband_the_parliament_parliamentarians_name:0 "Parliamentarians"
+ ROM_disband_the_parliament_parliamentarians_name_long:0 "Parliamentarians"
+ ROM_fppr:0 "FPPR"
+ ROM_fppr_long:0 "Frontul Patriotic Popular Român"
  MOL_democratic_party:0 "Sfatul Tării"
  MOL_communism_party:0 "Bolsevici"
  MOL_neutrality_party:0 "Congresul Ostasilor"
  MOL_neutrality_party_long:0 "Congresul Ostasilor Moldoveni"
+
 
  SER_republican_party_long:0 "Republikanska Stranka"
  SER_republican_party:0 "Republikanci"
