--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -5148,7 +5148,7 @@ ROM_the_carpist_renaissance:0 "The Carpist Renaissance"
 ROM_the_carpist_renaissance_desc:0 ""
 ROM_national_unity:0 "The National Unity State"
 ROM_national_unity_desc:0 ""
-ROM_national_unity.tt:0 "For every §Y8.00%§! §3Proto-Fascist§! support, this focus will give us:\nGain Base Stability: §G+1%§!\n\nBecause of our current §3Fascist§! support, this focus will give:"
+ROM_national_unity.tt:0 "For every §Y8.00%§! §qProto-Fascist§! support, this focus will give us:\nGain Base Stability: §G+1.00%§!.\n\nBecause of our current §qFascist§! support, this focus will give:"
 ROM_reconcile_pcd:0 "Reconcile the PCD"
 ROM_reconcile_pcd_desc:0 ""
  #custom tooltips
